fix wrapping

--- a/public/modal.css
+++ b/public/modal.css
@@ -136,5 +136,6 @@
 }
 
 .note-modal-input-content {
-    white-space: pre;
+    white-space: pre-wrap;
+    width: 100%;
 }
